Fix: move footer text when on a smaller screen to stop overlap with modal

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@
 /* fonts - Press+Start+2P - Silkscreen - Lexend+Deca */
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Silkscreen:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@400;700&display=swap');
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -37,6 +38,7 @@ body {
 #game_logo {
   width: 40px;
 }
+
 /* center items */
 .center {
   display: flex;
@@ -61,6 +63,7 @@ body {
 .body_light #game_title {
   color: black;
 }
+
 /* ================================ End of all page styling ======================================== */
 /* ================================================================================================= */
 /* ================================================================================================= */
@@ -225,6 +228,7 @@ All Modals
   color: white;
   min-height: 42px;
 }
+
 /*
 =================================
 Modal close button
@@ -383,6 +387,7 @@ Game settings Modal
 #customGameSettings>* {
   margin: 5px 0;
 }
+
 /*
 =================================
 Custom game modal form
@@ -517,7 +522,7 @@ Game Over Modal
   left: 0;
   top: 20%;
   width: 100%;
-  height: 100%;
+  height: 70%;
   overflow: auto;
 }
 
@@ -533,6 +538,7 @@ Game Over Modal
   border-radius: 10px;
   border: 3px solid black;
 }
+
 #newHSName {
   width: 80%;
   float: left;
@@ -548,6 +554,7 @@ Game Over Modal
 .missingName::placeholder {
   color: red !important;
 }
+
 /* submit new high score button */
 #newHSButton {
   float: left;
@@ -660,6 +667,7 @@ High Score Modal
   border: 2px solid red;
   overflow: hidden;
 }
+
 /* column widths */
 .ten {
   overflow: hidden;
@@ -766,6 +774,7 @@ Score Items
   color: mintcream;
   font-size: 60px;
 }
+
 .scoreCount {
   font-family: 'Silkscreen', cursive;
   margin-top: 20px;
@@ -783,6 +792,11 @@ Score Items
 @media screen and (max-width: 425px) {
   .thirty_hide {
     display: none;
+  }
+
+  /* page footer */
+  .creatorFooter {
+    text-align: right;
   }
 }
 
@@ -926,6 +940,7 @@ Score Items
     background-position: 0% 100%
   }
 }
+
 /* ====================================== End of Key frames ======================================== */
 /* ================================================================================================= */
 /* ================================================================================================= */
